--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 <title>Keepy – Keep Going</title>
 <link rel="icon" href="icon.png">
 
+
+
+
+<link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#3b82f6">
+<link rel="apple-touch-icon" href="icon.png">
+
+  
 <style>
 :root {
   --bg-primary: #0f172a;
@@ -1193,4 +1201,5 @@ render();
 </script>
 </body>
 </html>
+
 
